# content_production_automation

./: README.md  pyproject.toml
.github/workflows/: codex-automerge.yml
alembic/: env.py
alembic/versions/: 20260212_0001_add_orchestration_storage_tables.py  20260213_0002_add_niche_strategy_tables.py
contracts/: content_idea.schema.json  idea_generation.schema.json  learning_update.schema.json  scheduling_metadata.schema.json  script_package.schema.json  variant_result.schema.json  virality_event.schema.json
docs/: ARCHITECTURE.md  GOVERNANCE.md  PRD.md  ROADMAP.md  RUNBOOK.md  SETUP.md  feedback_loop.md
docs/agents/: agent-contracts.md  handoff-format.md
docs/architecture/: system-design.md
docs/checklists/: pre_publish_review.md
docs/data/: feature-store.md  virality-dataset.md
docs/experimentation/: shadow-testing.md
docs/implementation/: tasks-2-and-3.md
docs/modeling/: virality-score.md
docs/monetization/: objective-framework.md
docs/strategy/: mode-controller.md
schemas/: content_candidate.schema.json  experiment_outcome.schema.json  experiment_plan.schema.json  niche_candidate.schema.json  niche_score_breakdown.schema.json  performance_ingestion_record.schema.json  performance_snapshot.schema.json  published_post.schema.json
src/: main.py
tests/: test_adaptive_loops.py  test_engines.py  test_envelope_contracts.py  test_integrations.py  test_main_flow.py  test_niche_strategy_engine.py  test_prd_features.py  test_priority3_expansion.py  test_production_loop.py  test_schema_contracts.py  test_storage_repositories.py  test_system.py
(+32 files in other folders)
